--- a/pages/player/newprofile.html
+++ b/pages/player/newprofile.html
@@ -74,7 +74,7 @@
             <div class="sidebar1">
                 <div class="profilebox">
                     <div class="profileimgplace">
-                        <img class="profileimg" src="../../assets/images/avatorprofile.jpg" alt="profile">
+                        <img class="profileimg"  alt="profile">
                         <label for="input-file"> <i class='bx bxs-plus-circle'></i></label>
                         <input type="file" accept="image/jpeg,image/png,image/jpg" id="input-file">
                     </div>
@@ -157,7 +157,7 @@
                             <input type="checkbox" id="checkjoinplayer1"><label class="joinasplayer">Join as a player</label>
                         </div>
                         <label class="labelnamea">Age :</label><br>
-                        <input type="number" id="age"  disabled><br>
+                        <input type="number" id="age"  disabled><br><br>
                         <div class="select">
                             <p class="labelnames">Known Sports:</p><br>
                             <!-- <select id="sportss"disabled>
