--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -25,7 +25,7 @@
             <i class="fa-solid fa-bars"></i></label>
         <ul>
             <li><a href="../../index.html">Home</a> </li>
-            <li><a href="../player/findplayers.html">Find Players</a></li>
+            <li class="findplayers"><a href="../player/findplayers.html">Find Players</a></li>
             <li class="contact"><a href="../../pages/contactus/contact.html">Contact us</a></li>
             <li><a href="../login/login.html"> <button class="login">Login</button></a></li>
         </ul>
