--- a/pages/player/newprofile.html
+++ b/pages/player/newprofile.html
@@ -21,60 +21,12 @@
 </head>
 
 <body>
-    <!-- <div class="sidebar">
-        <div class="logo">
-            <img src="../../assets/images/LOGO (2).png">
-        </div>
-
-        <ul>
-            <li>
-                <i class='bx bxs-grid-alt'></i>
-                <span>Dash Board</span>
-
-            </li>
-
-            <li>
-                <i class='bx bxs-user'></i>
-                <span>Your Profile</span>
-
-            </li>
-
-            <li>
-                <i class="fa-solid fa-message"></i>
-                <span>Message</span>
-
-            </li>
-            <li>
-                <i class='bx bx-history'></i>
-                <span>Booking History</span>
-
-            </li>
-            <li>
-                <i class='bx bxs-analyse'></i>
-                <span>Analytics</span>
-
-            </li>
-
-
-        </ul>
-
-
-
-        <div class="logout">
-            <i class='bx bx-log-out'></i>
-            <span>Log out</span>
-        </div>
-
-
-
-
-    </div> -->
-     <div class="mainpoage">
+         <div class="mainpoage">
         <div class="sidebar">
             <div class="sidebar1">
                 <div class="profilebox">
                     <div class="profileimgplace">
-                        <img class="profileimg"  alt="profile">
+                        <img class="profileimg" src="https://freeimage.host/i/HkW7U4S" alt="profile">
                         <label for="input-file"> <i class='bx bxs-plus-circle'></i></label>
                         <input type="file" accept="image/jpeg,image/png,image/jpg" id="input-file">
                     </div>
