fix: already some  bugs

--- a/pages/bookinground/ground1.html
+++ b/pages/bookinground/ground1.html
@@ -100,10 +100,10 @@
   <!-- rules -->
   <!-- <div class="rules">
  <h2> About it rules</h2>
- <p>For Football players are advised to wear shoes only on ground</p>
- <p>sharp metal football are not allowed </p>
- <p>For tennis 6 players are only allowed</p> -->
-   <!-- </div><br> -->
+ For Football players are advised to wear shoes only on ground
+ sharp metal football are not allowed 
+ For tennis 6 players are only allowed
+   <</div><br> -->
    <!-- rules -->
    <!-- price -->
    <!-- <div class="price">
