--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
          </div>
         </div>
         </div>
+        <a href="./pages/admin/adminsignup.html" aria-label="linkedin ">Join as a seller </a>
     </footer>
          <!-- footer -->
 
