--- a/pages/admin/adminsignup.html
+++ b/pages/admin/adminsignup.html
@@ -46,7 +46,7 @@
                 <label>Phone Number:</label><br>
                 <div class="boxform">
                     <input type="number" placeholder="Phone Number" id="user_phoneno" aria-label="phone number"
-                        name="mobile-number" required><br>
+                        name="mobile-number" required    pattern="[0-9]{10}" ><br>
                     <i class="fa-regular fa-circle-check"></i>
                     <i class="fa-solid fa-circle-exclamation"></i>
                 </div><br>
