fix: already some  bugs

--- a/pages/login/signup.html
+++ b/pages/login/signup.html
@@ -37,7 +37,7 @@
 </div><br>
     <label >Phone Number:</label><br>
       <div class="boxform">
-    <input type="tel" placeholder="Phone Number" id="user_phoneno" aria-label="phone number" name="mobile-number"  pattern="[0-9]{10}"  required><br>
+    <input type="tel" placeholder="Phone Number" id="user_phoneno" aria-label="phone number" name="mobile-number"  pattern="[0-9]{10}" title="PLease enter 10 digit number" required><br>
     <i class="fa-regular fa-circle-check"></i>
     <i class="fa-solid fa-circle-exclamation"></i>
 </div><br>
