--- a/pages/admin/adminsignup.html
+++ b/pages/admin/adminsignup.html
@@ -45,8 +45,8 @@
                 </div><br>
                 <label>Phone Number:</label><br>
                 <div class="boxform">
-                    <input type="number" placeholder="Phone Number" id="user_phoneno" aria-label="phone number"
-                        name="mobile-number" required    pattern="[0-9]{10}" ><br>
+                    <input type="tel" placeholder="Phone Number" id="user_phoneno" aria-label="phone number"
+                        name="mobile-number" required    pattern="[0-9]{10}" title="PLease enter 10 digit number"><br>
                     <i class="fa-regular fa-circle-check"></i>
                     <i class="fa-solid fa-circle-exclamation"></i>
                 </div><br>
