--- a/pages/login/accountcreated.html
+++ b/pages/login/accountcreated.html
@@ -14,7 +14,7 @@
     <div id="container">
     <div class="tick">
     <i class="fa-solid fa-check"></i><br>
-    <h2 class="head">Your Account Successfuly Created</h2><br><br><br>
+    <h2 class="head"> You Logged In  </h2><br><br><br>
     <!-- button -->
     <!-- <a href="../../pages/player/joinplayer.html" ><input type="button" value="Join As a Players" id="joinasplayers" aria-label="joinplayer"></a><br> -->
     <a href="../../pages/bookinground/bookground.html" ><input type="button" value="Book Grounds" id="bookground" aria-label="bookgrounds"></a> 
