fix: already some  bugs

--- a/pages/contactus/contact.html
+++ b/pages/contactus/contact.html
@@ -19,10 +19,11 @@
         <label for="check" class="checkbtn">
        <i class="fa-solid fa-bars"></i></label>
     
-<ul>
+<ul class="head">
     <li><a href="../../index.html">Home</a> </li>
     <li><a href="../../pages/bookinground/bookground.html">Book Grounds</a></li>
-    <li><a href="../../pages/player/findplayers.html">Find Players</a></li>
+    <li class="findplayers"><a href="../../pages/player/findplayers.html">Find Players</a></li>
+    <!-- <li class="contact"><a href="./pages/contactus/contact.html">Contact us</a></li> -->
     <li><a href="../..//pages/login/login.html"> <button class="login">Login</button></a></li>
 
     
@@ -163,5 +164,6 @@
     </div>
 </footer>
      <!-- footer -->
+     <script src="../../assets/js/contact.js"></script>
 </body>
 </html>
