fix: already some  bugs

--- a/pages/bookinground/ground1.html
+++ b/pages/bookinground/ground1.html
@@ -22,7 +22,7 @@
    <ul>
    <li><a href="../../index.html">Home</a> </li>
    <li><a href="../../pages/bookinground/bookground.html">Book Grounds</a></li>
-   <li><a href="../../pages/player/findplayers.html">Find Players</a></li>
+   <li class="findplayers"><a href="../../pages/player/findplayers.html">Find Players</a></li>
   <li class="contact"><a href="../../pages/contactus/contact.html">Contact us</a></li>
     <li><a href="../../pages/login/login.html"> <button class="login">Login</button></a></li>
    </ul>
