--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <li><a href="#">Home</a> </li>
  <li><a href="./pages/bookinground/bookground.html">Book Grounds</a></li>
  <li class="findplayers"><a href="./pages/player/findplayers.html">Find Players</a></li>
- <li class="contact"><a href="./pages/contactus/contact.html">Contact us</a></li>
+ <li class="contact "><a href="./pages/contactus/contact.html">Contact us</a></li>
  <li><a href="./pages/login/login.html"> <button class="login">Login</button></a></li>
 </ul>
 <a href="/index.html"><img class="logo" src="./assets/images/Logo.png " alt="Book and play"></a>
@@ -174,7 +174,7 @@
          </div>
         </div>
         </div>
-        <a href="./pages/admin/adminsignup.html" aria-label="linkedin ">Join as a seller </a>
+        <a href="./pages/admin/adminlogin.html" aria-label="linkedin ">Join as a seller </a>
     </footer>
          <!-- footer -->
 
