fix: already some  bugs

--- a/pages/login/signup.html
+++ b/pages/login/signup.html
@@ -93,7 +93,7 @@
                
         </select><br> -->
         <p class="labelname">Location</p><br>
-        <select id="locationselect" required>
+        <select id="locationselect" >
             <option>Chennai</option>
             <option>Coimbatore</option>
             <option>Salem</option>
