fix: already some  bugs

--- a/pages/bookinground/mybooking.html
+++ b/pages/bookinground/mybooking.html
@@ -57,7 +57,7 @@
 
     <!-- main2 groundslist -->
     <div class="main2">
-
+<h2 class="groundword">Your Current Ground Booking</h2>
         <div class="parent">
             <!-- <div class="box">
                 <div class="child">
