--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -22,7 +22,7 @@
         title="PLease fill the password with one symbols and Upper case" required><br>
         <!-- <a href="../../index.html"><input type="button" value="Login" id="login" aria-label="button" ></a> -->
         <button id="login" type="submit">Login</button><br>
-        <a class="fp" href="#">Forget password</a><br>
+        <!-- <a class="fp" href="#">Forget password</a><br> -->
         <p class="newsign">New user</p><br>
         <!-- <button id="newlogin" type="button" onclick="getData()">Create New Account</button><br> -->
         <a href="../../pages/login/signup.html"><input type="button" value="Create New Account" id="newlogin"
