--- a/pages/player/newprofile.html
+++ b/pages/player/newprofile.html
@@ -54,12 +54,9 @@
                     </div>
                     <div class="bookinghistory">
                         <i class='bx bx-history'></i>
-                        <span>Booking History</span>
+                        <span>Your Booking</span>
                     </div>
-                    <div class="bookinghistory">
-                        <i class='bx bx-history'></i>
-                        <span>Current Booking</span>
-                    </div>
+                
                     <div class="analytics">
                         <i class='bx bxs-analyse'></i>
                         <span>Analytics</span>
