--- a/pages/bookinground/mybooking.html
+++ b/pages/bookinground/mybooking.html
@@ -21,14 +21,24 @@
 
     <!-- header -->
     <header>
-
+        <input type="checkbox" id="check"/>
+        <label for="check" class="checkbtn">
+          <i class="fa-solid fa-bars"></i></label>
+        
+         <ul>
+         <li><a href="../../index.html">Home</a> </li>
+         <li><a href="../../pages/bookinground/bookground.html">Book Grounds</a></li>
+         <li class="findplayers"><a href="../../pages/player/findplayers.html">Find Players</a></li>
+         <li class="contact "><a href="../../pages/contactus/contact.html">Contact us</a></li>
+         <li><a href="./pages/login/login.html"> <button class="login">Login</button></a></li>
+        </ul>
 
         <a href="../../index.html"><img class="logo" src="../../assets/images/Logo.png" alt="Book and play"></a>
     </header>
     <!-- header -->
 
     <!-- main1 search-->
-    <div class="main1">
+    <!-- <div class="main1"> -->
         <!-- <h3 class="content1">Search Grounds Around you</h3>
         <img class="locationicon" src="../../assets/images/locationicon.gif" alt="locationicon">
         <select class="locationselect" id="selectlocation">
@@ -52,7 +62,7 @@
                         class="fa-solid fa-magnifying-glass"></i></button>
             </form>
         </div> -->
-    </div>
+    <!-- </div> -->
     <!-- main1 search-->
 
     <!-- main2 groundslist -->
