--- a/pages/player/newprofile.html
+++ b/pages/player/newprofile.html
@@ -151,9 +151,13 @@
                             <input type="time" id="timingsfrom" aria-label="timingsfrom" value="4:00"  disabled ><br>
 
                             <p class="timep">To</p><br>
-                            <input type="time" id="timingsto" aria-label="timingtoo" value="5:00"  disabled>
+                            <input type="time" id="timingsto" aria-label="timingtoo" value="5:00"  disabled><br>
+
+                            <span>Few lines About You</span>
+                            <textarea class="textabout" disabled></textarea>
                         </div>
                         <br>
+                   
                         <button class="profile2" type="submit">Edit</button>
                     </form>
                     </div>
