--- a/pages/player/playerprofile.html
+++ b/pages/player/playerprofile.html
@@ -30,10 +30,11 @@
     
 </ul>
 <a href="../../index.html"> <img class="logo" src="../../assets/images/Logo.png"  alt="Book and play"></a>
-    <div class="cont2">
+   
 <br>
-       <img class="userlogo" src="../../assets/images/userlogo.png" alt="profilepicofplayer">
+<div class="cont2">
        <div class="userbar">
+        <!-- <img class="userlogo" src="../../assets/images/userlogo.png" alt="profilepicofplayer"> -->
 <a href="../../pages/player/newprofile.html"> <button class="userprofile"> Your Profile</button></a></li>
 </div>
     </div>
