--- a/pages/bookinground/ground1.html
+++ b/pages/bookinground/ground1.html
@@ -249,6 +249,7 @@
 
 </div>
 </footer>
+<script src=" https://smtpjs.com/v3/smtp.js"></script>
 <script src="../../assets/js/details.js"></script>
 
 
