--- a/pages/player/newprofile.html
+++ b/pages/player/newprofile.html
@@ -65,15 +65,15 @@
                 <div class="hr">
 
                 </div>
-                <div class="friendslist">
+              <a href="../../pages/player/friendlist.html">  <div class="friendslist">
                     <i class='bx bxs-group'></i>
                     <span>Friends List</span>
-                </div>
+                </div></a>
 
-                <div class="friendsrequest">
+              <a href="../../pages/player/friendrequest.html"> <div class="friendsrequest">
                     <i class='bx bx-group bx-tada'></i>
                     <span>Friends Request</span>
-                </div>
+                </div></a>
 
               <button class="logout"> 
                     <i class='bx bx-log-out'></i>
@@ -153,7 +153,7 @@
                             <p class="timep">To</p><br>
                             <input type="time" id="timingsto" aria-label="timingtoo" value="5:00"  disabled><br>
 
-                            <span>Few lines About You</span>
+                            <span class="linetext">Few lines About You</span>
                             <textarea class="textabout" disabled></textarea>
                         </div>
                         <br>
