--- a/pages/player/playerprofile.html
+++ b/pages/player/playerprofile.html
@@ -34,8 +34,8 @@
 <br>
 <div class="cont2">
        <div class="userbar">
-        <!-- <img class="userlogo" src="../../assets/images/userlogo.png" alt="profilepicofplayer"> -->
-<a href="../../pages/player/newprofile.html"> <button class="userprofile"> Your Profile</button></a></li>
+        <img class="userlogo" src="../../assets/images/userlogo.png" alt="profilepicofplayer">
+<a href="../../pages/player/newprofile.html"> <button class="userprofile"> Your Profile</button></a>
 </div>
     </div>
   
