fix: chat feature and requesting feature  bugs

--- a/pages/player/newprofile.html
+++ b/pages/player/newprofile.html
@@ -48,10 +48,10 @@
                     <div class="dashboard"> <i class='bx bxs-grid-alt'></i>
                         <span>Dash Board</span>
                     </div>
-                    <div class="message">
+                    <a href="../../pages/player/playermessages.html"><div class="message">
                         <i class="fa-solid fa-message"></i>
                         <span>Message</span>
-                    </div>
+                    </div></a>
                     <div class="bookinghistory">
                         <i class='bx bx-history'></i>
                         <span>Your Booking</span>
