--- a/pages/player/playerprofile.html
+++ b/pages/player/playerprofile.html
@@ -141,8 +141,8 @@
 
 
 
-
-<!-- chat with player -->
+<!-- 
+chat with player -->
 <!-- sidebar2 -->
 <!-- <div class="sidebar2">
     <div class="container">
